--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,3 +1,3 @@
 <%# add navigation links to this file %>
 <li><%= link_to "Acerca de.", page_path("about") %></li>
-<li><%= link_to "Contacto", page_path("contact") %></li>
+<li><%= link_to "Contacto", new_contact_path %></li>
