some changes xD

--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -1,5 +1,5 @@
-<% content_for :title do %>Foobar Kadigan<% end %>
-<% content_for :description do %>Pagina de Foobar Kadigan<% end %>
+<% content_for :title do %>Jesus Marin<% end %>
+<% content_for :description do %>Pagina de Jesus Marin<% end %>
 <section>
   <img src="http://lorempixel.com/1170/600/cats/1">
 </section>
@@ -11,7 +11,7 @@
     <div class="form-centered">
       <%= simple_form_for @visitor do |f| %>
         <%= f.error_notification %>
-      <%= f.input :email, label: false, :placeholder => 'Su Correo...' %>
+      <%= f.input :email, label: false, :placeholder => 'Tu Correo aqui...' %>
       <br/>
       <%= f.button :submit, "Registrate en la lista de noticias",
                    :class => "submit" %>
